Fri Dec 14 12:10:39 2001  Jason Tishler <jason@tishler.net>

	* mkpasswd.c (opts): Add indication that '-p' option requires an
	argument.

2001-12-11  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Add define to CXXFLAGS.

2001-12-03  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (usage): Add -c description.
	* cygpath.cc (usage): Alphabetize options.
	* strace.cc (usage): Ditto.

2001-11-21  Christopher Faylor  <cgf@redhat.com>

	* path.cc (cygpath): Don't consider cygdrive stuff when trying to derive
	native paths.

2001-11-20  Mark Bradshaw  <bradshaw@staff.crosswalk.com>

	* mkpasswd.c: include lmerr.h
	(main): New -u option to allow specifying a
	specific user.  If specified, groups aren't displayed and
	output is limited to only the specified user.
	(enum_users): If specific user is specified, via -u option,
	display only that user's record.  With -u use NetUserGetInfo
	instead of NetUserEnum.
	(load_netapi): Added netusergetinfo.

2001-11-15  Gary R. Van Sickle  <g.r.vansickle@worldnet.att.net>

	* strace.cc (main): Change getopt() to getopt_long().
	Add support for help and version info.
	Use new parse_mask() function for -m/--mask option.
	(longopts): Add long options structure.
	(opts): Move options string from getopts call to static var.
	(usage): Print usage information.
	(SCCSid): Version info.
	(version): New function for displaying version info.
	(parse_mask): New function supporting parsing of mnemonics,
	hex, and basic expressions in masks.
	(mnemonic2ul): New mnemonic parsing function.
	(tag_mask_mnemonic): New type.
	(mnemonic_table): New table of mnemonics for mnemonic2ul() to
	search through.

2001-11-12  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Redefine output format slightly.
	Print correct build number on 9x/ME systems.

2001-11-12  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (main): Slight formatting tweak.

2001-11-12  Corinna Vinschen  <corinna@vinschen.de>
